--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-watch": "^7.0.0"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "mongoose": "^5.5.0"
