--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@babel/core": "^7.4.0",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.2",
-    "babel-watch": "^7.0.0"
+    "babel-watch": "^7.0.0",
+    "babel-polyfill": "^6.26.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "mongoose": "^5.5.0"
