--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.0",
+    "mongoose-dummy": "^1.0.8",
     "mongoose-unique-validator": "^2.0.3"
   }
 }
