--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "babel-watch ./src/server.js",
     "build": "babel src --out-dir dist"
   },
@@ -14,8 +14,10 @@
     "@babel/core": "^7.4.0",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.2",
+    "babel-polyfill": "^6.26.0",
     "babel-watch": "^7.0.0",
-    "babel-polyfill": "^6.26.0"
+    "jest": "^24.9.0",
+    "supertest": "^4.0.2"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
